--- a/index.html
+++ b/index.html
@@ -4,6 +4,40 @@
 <style>
 
 /*    Escribe aqui tu codigo de CSS    */
+*{margin: 0;
+  padding: 0;}
+  html {
+    position: static;
+    min-height: 100%;
+}
+nav{
+    width: 20%;
+    float: left;
+}
+.section-container{
+    width: 60%;
+    float: left;
+    margin-bottom: 20px;
+}
+
+aside{
+    width: 20%;
+    float: left;
+}
+footer{
+    clear: both;
+    text-align: center;
+    color:white;
+    background-color: black;
+    overflow: hidden; 
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+footer p{
+    
+    margin-bottom: 0px;
+}
 
 
 </style>
