--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
         /*    Escribe aqui tu codigo de CSS    */
         * {
             margin: 0;
-            
+
         }
 
         html {
             position: static;
-            min-height: 100%;
         }
 
         nav {
@@ -35,11 +34,11 @@
             color: white;
             background-color: black;
             overflow: hidden;
-            position: absolute;
+            position: fixed;
+            left: 0;
             bottom: 0;
             width: 100%;
         }
-
     </style>
 
     <meta charset="UTF-8">
